--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -41,6 +41,16 @@
         </div>
     </header>
 
+    <div class="banner">
+        <h1>One more friend</h1>
+        <h2>Thousands more fun!</h2>
+        <p class="banner__title-p">Having a pet means you have more joy, a new friend, a happy person who will always be with you to have fun. We have 200+ different pets that can meet your needs!</p>
+        <div class="banner__title-btn">
+            <button>View Intro <i></i></button>
+            <button>Explore Now</button>
+        </div>
+    </div>
+
 
     <script src="main.js"></script>
 </body>
