--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.cdnfonts.com/css/svn-gilroy" rel="stylesheet">
     <title>Monito</title>
 </head>
 <body>
@@ -41,6 +42,78 @@
         </div>
     </header>
 
+    <!-- Our Pets  -->
+    <div class="pets">
+        <h2 class="pets__title">Take a look at some of our pets</h2>
+        <div class="pets__items">
+            <div class="pets__items-card">
+                <img class="pets__img" src="../images/pets/pets-1.png" alt="#">
+                <div class="pets__info">
+                    <div class="pets__info-name">MO231 - Pomeranian White</div>
+                    <div class="pets__info-age"><span>Gene:</span> Male &emsp; <span>Age:</span> 2 month</div>
+                    <div class="pets__info-vnd">6.900 VND</div>
+                </div>
+            </div>
+            <div class="pets__items-card">
+                <img class="pets__img" src="../images/pets/pets-2.png" alt="#">
+                <div class="pets__info">
+                    <div class="pets__info-name">MO502 - Poodle Tiny Yellow</div>
+                    <div class="pets__info-age"><span>Gene:</span> Male &emsp; <span>Age:</span> 2 month</div>
+                    <div class="pets__info-vnd">10.900 VND</div>
+                </div>
+            </div>
+            <div class="pets__items-card">
+                <img class="pets__img" src="../images/pets/pets-3.png" alt="#">
+                <div class="pets__info">
+                    <div class="pets__info-name">MO102 - Poodle Tiny Sepia</div>
+                    <div class="pets__info-age"><span>Gene:</span> Male &emsp; <span>Age:</span> 2 month</div>
+                    <div class="pets__info-vnd">8.600 VND</div>
+                </div>
+            </div>
+            <div class="pets__items-card">
+                <img class="pets__img" src="../images/pets/pets-4.png" alt="#">
+                <div class="pets__info">
+                    <div class="pets__info-name">MO512 - Alaskan Malamute Grey</div>
+                    <div class="pets__info-age"><span>Gene:</span> Male &emsp; <span>Age:</span> 2 month</div>
+                    <div class="pets__info-vnd">6.900 VND</div>
+                </div>
+            </div>
+            <div class="pets__items-card">
+                <img class="pets__img" src="../images/pets/pets-5.png" alt="#">
+                <div class="pets__info">
+                    <div class="pets__info-name">MO231 - Pembroke Corgi Cream</div>
+                    <div class="pets__info-age"><span>Gene:</span> Male &emsp; <span>Age:</span> 2 month</div>
+                    <div class="pets__info-vnd">9.900 VND</div>
+                </div>
+            </div>
+            <div class="pets__items-card">
+                <img class="pets__img" src="../images/pets/pets-6.png" alt="#">
+                <div class="pets__info">
+                    <div class="pets__info-name">MO231 - Pomeranian White</div>
+                    <div class="pets__info-age"><span>Gene:</span> Male &emsp; <span>Age:</span> 2 month</div>
+                    <div class="pets__info-vnd">8.500 VND</div>
+                </div>
+            </div>
+            <div class="pets__items-card">
+                <img class="pets__img" src="../images/pets/pets-7.png" alt="#">
+                <div class="pets__info">
+                    <div class="pets__info-name">MO502 - Pembroke Corgi Tricolor</div>
+                    <div class="pets__info-age"><span>Gene:</span> Male &emsp; <span>Age:</span> 2 month</div>
+                    <div class="pets__info-vnd">7.900 VND</div>
+                </div>
+            </div>
+            <div class="pets__items-card">
+                <img class="pets__img" src="../images/pets/pets-8.png" alt="#">
+                <div class="pets__info">
+                    <div class="pets__info-name">MO512 - Poodle Tiny Dairy Cow</div>
+                    <div class="pets__info-age"><span>Gene:</span> Male &emsp; <span>Age:</span> 2 month</div>
+                    <div class="pets__info-vnd">5.600 VND</div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Banner -->
     <div class="banner">
         <h1>One more friend</h1>
         <h2>Thousands more fun!</h2>
@@ -51,7 +124,187 @@
         </div>
     </div>
 
+    <!-- Products -->
+    <div class="products">
+        <h2 class="products__title">Our Products</h2>
+        <div class="products__items">
+            <div class="products__card">
+                <img class="products__img" src="../images/products/products-1.png" alt="#">
+                <div class="products__info">
+                    <div class="products__info-title">Reflex Plus Adult Cat Food Salmon</div>
+                    <div class="products__info-name"><span>Products:</span> Cat Food &emsp; <span>Size:</span>1.5kg</div>
+                    <div class="products__info-vnd">16.900 VND</div>
+                    <button class="products__btn-img"><img src="../images/products.svg" alt="#"> Free Toy & Free Shaker</button>
+                </div>
+            </div>
+            <div class="products__card">
+                <img class="products__img" src="../images/products/products-2.png" alt="#">
+                <div class="products__info">
+                    <div class="products__info-title">Reflex Plus Adult Cat Food Salmon</div>
+                    <div class="products__info-name"><span>Products:</span> Cat Food &emsp; <span>Size:</span>1.5kg</div>
+                    <div class="products__info-vnd">10.900 VND</div>
+                    <button class="products__btn-img"><img src="../images/products.svg" alt="#"> Free Toy & Free Shaker</button>
+                </div>
+            </div>
+            <div class="products__card">
+                <img class="products__img" src="../images/products/products-3.png" alt="#">
+                <div class="products__info">
+                    <div class="products__info-title">Cat scratching ball toy kitten sisal rope ball</div>
+                    <div class="products__info-name"><span>Products:</span> Toy</div>
+                    <div class="products__info-vnd">16.600 VND</div>
+                    <button class="products__btn-img"><img src="../images/products.svg" alt="#"> Free Toy & Free Shaker</button>
+                </div>
+            </div>
+            <div class="products__card">
+                <img class="products__img" src="../images/products/products-4.png" alt="#">
+                <div class="products__info">
+                    <div class="products__info-title">Cute Pet Cat Warm Nest</div>
+                    <div class="products__info-name"><span>Products:</span> Toy</div>
+                    <div class="products__info-vnd">21.000 VND</div>
+                    <button class="products__btn-img"><img src="../images/products.svg" alt="#"> Free Toy & Free Shaker</button>
+                </div>
+            </div>
+            <div class="products__card">
+                <img class="products__img" src="../images/products/products-5.png" alt="#">
+                <div class="products__info">
+                    <div class="products__info-title">NaturVet Dogs - Omega-Gold Plus Salmon Oil</div>
+                    <div class="products__info-name"><span>Products:</span> Dog Food &emsp; <span>Size:</span>385gm</div>
+                    <div class="products__info-vnd">25.000 VND</div>
+                    <button class="products__btn-img"><img src="../images/products.svg" alt="#"> Free Toy & Free Shaker</button>
+                </div>
+            </div>
+            <div class="products__card">
+                <img class="products__img" src="../images/products/products-6.png" alt="#">
+                <div class="products__info">
+                    <div class="products__info-title">Costumes Fashion Pet Clother Cowboy Rider</div>
+                    <div class="products__info-name"><span>Products:</span> Costume &emsp; <span>Size:</span>1.5kg</div>
+                    <div class="products__info-vnd">19.500 VND</div>
+                    <button class="products__btn-img"><img src="../images/products.svg" alt="#"> Free Toy & Free Shaker</button>
+                </div>
+            </div>
+            <div class="products__card">
+                <img class="products__img" src="../images/products/products-7.png" alt="#">
+                <div class="products__info">
+                    <div class="products__info-title">Costumes Chicken Drumsti ck Headband</div>
+                    <div class="products__info-name"><span>Products:</span> Costume</div>
+                    <div class="products__info-vnd">23.000 VND</div>
+                    <button class="products__btn-img"><img src="../images/products.svg" alt="#"> Free Toy & Free Shaker</button>
+                </div>
+            </div>
+            <div class="products__card">
+                <img class="products__img" src="../images/products/products-8.png" alt="#">
+                <div class="products__info">
+                    <div class="products__info-title">Plush Pet Toy
+                    </div>
+                    <div class="products__info-name"><span>Products:</span>Toy</div>
+                    <div class="products__info-vnd">25.000 VND</div>
+                    <button class="products__btn-img"><img src="../images/products.svg" alt="#"> Free Toy & Free Shaker</button>
+                </div>
+            </div>
+        </div>
+    </div>
 
+    <!-- Pet Sellers -->
+
+    <div class="sellers"> 
+        <div class="sellers__title">Proud to be part of <span>Pet Sellers</span></div>
+        <div class="sellers__logo">
+            <img src="../images/cells-icon/sheba.png" alt="#">
+            <img src="../images/cells-icon/whiskas.png" alt="#">
+            <img src="../images/cells-icon/bakers.png" alt="#">
+            <img src="../images/cells-icon/felix.png" alt="#">
+            <img src="../images/cells-icon/good-boy.png" alt="#">
+            <img src="../images/cells-icon/butchers.png" alt="#">
+            <img src="../images/cells-icon/pedigree.png" alt="#">
+        </div>
+    </div>
+
+    
+    <!-- Adoption -->
+    <div class="adoption">
+        <h1>Adoption <img src="../images/fontisto_paw.png" alt="#"></h1>
+        <h2>We need help. so do they.</h2>
+        <p class="adoption__title-p">Adopt a pet and give it a home,
+            it will be love you back unconditionally.</p>
+        <div class="adoption__title-btn">
+            <button>Explore Now</button>
+            <button>View Intro <i></i></button>
+        </div>
+    </div>
+
+    <!-- Knowledge -->
+    <div class="knowledge">
+        <h2 class="knowledge__title">
+            Useful pet knowledge
+        </h2>
+        <div class="knowledge__items">
+            <div class="knowledge__card">
+                <img class="knowledge__img" src="../images/knowledge/knowledge-1.png" alt="#">
+                <div class="knowledge__blog">
+                    <div class="knowledge__blog-title">What is a Pomeranian? How to Identify Pomeranian Dogs</div>
+                    <p class="knowledge__blog-info">The Pomeranian, also known as the Pomeranian (Pom dog), is always in the top of the cutest pets. Not only that, the small, lovely, smart, friendly, and skillful circus dog breed.</p>
+                </div>
+            </div>
+            <div class="knowledge__card">
+                <img class="knowledge__img" src="../images/knowledge/knowledge-2.png" alt="#">
+                <div class="knowledge__blog">
+                    <div class="knowledge__blog-title">Dog Diet You Need To Know</div>
+                    <p class="knowledge__blog-info">Dividing a dog's diet may seem simple at first, but there are some rules you should know so that your dog can easily absorb the nutrients in the diet. For those who are just starting to raise dogs, especially newborn puppies with relatively weak resistance.</p>
+                </div>
+            </div>
+            <div class="knowledge__card">
+                <img class="knowledge__img" src="../images/knowledge/knowledge-3.png" alt="#">
+                <div class="knowledge__blog">
+                    <div class="knowledge__blog-title">Why Dogs Bite and Destroy Furniture and How to Prevent It Effectively</div>
+                    <p class="knowledge__blog-info">Dog bites are common during development. However, no one wants to see their furniture or important items being bitten by a dog.</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+    <!-- Footer -->
+    <footer class="footer">
+        <div class="footer__send">
+            <div class="footer__send-title">Register now so you don't miss our programs</div>
+            <div class="footer__send-input">
+                <input type="email" placeholder="Enter your Email">
+                <button>Subscribe Now</button>
+            </div>
+        </div>
+        <nav class="footer__nav">
+            <div class="footer__nav-link">
+                <a href="">Home</a>
+                <a href="">Category</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+            </div>
+            <div class="footer__nav-social">
+                <a  href="#" target="blank">
+                    <i class="fa fa-facebook-official" aria-hidden="true"></i>
+                </a>
+                <a href="#" target="blank">
+                    <i class="fa-brands fa-twitter" aria-hidden="true"></i>
+                </a>
+                <a  href="#" target="blank">
+                    <i class="fa fa-instagram" aria-hidden="true"></i>
+                </a>
+                <a  href="#" target="blank">
+                    <i class="fa fa-youtube" aria-hidden="true"></i>
+                </a>
+            </div>
+        </nav>
+        <div class="footer__end">
+            <div>© 2022 Monito. All rights reserved.</div>
+            <div class="footer__end-logo">
+                <img src="../images/Logo.png" alt="#">
+                <span class="menu__logo-text">Pets for Best</span>
+            </div>
+            <div >Terms of Service &emsp; Privacy Policy</div>
+        </div>
+    </footer>
+
+    <script src="https://kit.fontawesome.com/df08c10447.js" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </body>
 </html>
