--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -265,13 +265,13 @@
 
     <!-- Footer -->
     <footer class="footer">
-        <div class="footer__send">
+        <form class="footer__send" action="#" novalidate >
             <div class="footer__send-title">Register now so you don't miss our programs</div>
             <div class="footer__send-input">
-                <input type="email" placeholder="Enter your Email">
-                <button>Subscribe Now</button>
+                <input class="js-input js-input-email" type="email" placeholder="Enter your Email">
+                <button class="footer__send-btn" type="submit">Subscribe Now</button>
             </div>
-        </div>
+        </form>
         <nav class="footer__nav">
             <div class="footer__nav-link">
                 <a href="">Home</a>
