--- a/Homepage/index.html
+++ b/Homepage/index.html
@@ -17,10 +17,10 @@
                 <span class="menu__logo-text">Pets for Best</span>
             </div>
             <nav class="menu__link">
-                <a href="">Home</a>
-                <a href="">Category</a>
-                <a href="">About</a>
-                <a href="">Contact</a>
+                <a href="#">Home</a>
+                <a href="../Category/index.html">Category</a>
+                <a href="#">About</a>
+                <a href="#">Contact</a>
             </nav>
             <div class="menu__btns">
                 <div class="menu__search">
